--- a/configs/experiments/baseline_kl16_coco.yml
+++ b/configs/experiments/baseline_kl16_coco.yml
@@ -75,7 +75,7 @@ model:
 data:
   target: data.build.DataModuleFromConfig
   params:
-    batch_size: 2 # 5
+    batch_size: 25
     num_workers: 5
     wrap: false
     train:
